Global 변수 알아보기

--- a/Nodejs/Router/template/layout/base.html
+++ b/Nodejs/Router/template/layout/base.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="container" style="padding-top: 100px">
-        {% block content %}{% endblock %}
+        {% if isLoin %} 로그인 중 {% else %} {console.log(isLogin)}로그인이 안되어있음 {% endif %} {% block content %}{% endblock %}
     </div>
 </body>
 
