--- a/Nodejs/Router/template/layout/base.html
+++ b/Nodejs/Router/template/layout/base.html
@@ -1,18 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>{{ title }}</title>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" />
-</head>
+    <link
+      rel="stylesheet"
+      href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+    />
+  </head>
 
-<body>
-    <div class="container" style="padding-top: 100px">
-        {% if isLoin %} 로그인 중 {% else %} {console.log(isLogin)}로그인이 안되어있음 {% endif %} {% block content %}{% endblock %}
+  <body>
+    <div class="container" style="padding-top: 10px">
+      <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+          <div
+            class="collapse navbar-collapse"
+            id="bs-example-navbar-collapse-9"
+          >
+            <ul class="nav navbar-nav">
+              {% from "macro/link.html" import link %} {{ link(
+              '/admin/products' , "List" , req_path ) }} {{ link(
+              '/admin/products/write' , "Write" , req_path ) }}
+            </ul>
+          </div>
+        </div>
+      </nav>
+
+      {% block content %}{% endblock %}
     </div>
-</body>
-
+  </body>
 </html>
