--- a/Nodejs/PJ_Map/template/home.html
+++ b/Nodejs/PJ_Map/template/home.html
@@ -5,5 +5,62 @@
     
 <div id="map_area" style="min-height:500px;"></div>
 
+<script>
+var mapContainer = new kakao.maps.Map(
+    document.getElementById("map_area"),
+    {
+        center: new kakao.maps.LatLng( 
+            {{ map_api.default.lat }} ,
+            {{ map_api.default.lng }} 
+        ), // 지도의 중심좌표
+        level: 9 // 지도의 확대 레벨
+    }
+);
+var apts = {{ apts | dump | safe }};
+var positions = [];
+for(var key in apts){
+    if(apts[key].geo != null){
+        // 좌표가 존재할때만 좌표 셋팅
+        positions[key] = {
+            name : apts[key].name ,
+            latlng : new kakao.maps.LatLng( 
+                apts[key].geo.coordinates[1] , 
+                apts[key].geo.coordinates[0] 
+            )
+        }
+    }
+    
+}
+
+// 마커 이미지의 이미지 주소입니다
+var imageSrc = "https://t1.kakaocdn.net/localimg/localimages/07/mapapidoc/markerStar.png"; 
+    
+for (var i = 0; i < positions.length; i ++) {
+    
+    // 마커 이미지의 이미지 크기 입니다
+    var imageSize = new kakao.maps.Size(24, 35); 
+    
+    // 마커 이미지를 생성합니다    
+    var markerImage = new kakao.maps.MarkerImage(imageSrc, imageSize); 
+    
+    // 마커를 생성합니다
+    var marker = new kakao.maps.Marker({
+        map: mapContainer, // 마커를 표시할 지도
+        position: positions[i].latlng, // 마커를 표시할 위치
+        title : positions[i].name, // 마커의 타이틀, 마커에 마우스를 올리면 타이틀이 표시됩니다
+        image : markerImage // 마커 이미지 
+    });
+
+    // 인포윈도우로 장소에 대한 설명을 표시합니다
+    var infowindow = new kakao.maps.InfoWindow({
+        content: 
+            '<div style="width:150px;text-align:center;padding:6px 2px;"> \
+                '+ positions[i].name + ' \
+            </div>'
+    });
+    infowindow.open(mapContainer, marker);
+}
+
+</script>
 
 {% endblock %}
