--- a/Nodejs/PJ_Map/template/layout/base.html
+++ b/Nodejs/PJ_Map/template/layout/base.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="/static/js/common.js"></script>
+    <script type="text/javascript" src="//dapi.kakao.com/v2/maps/sdk.js?appkey={{ map_api.KAKAO_JAVASCRIPT_KEY  }}&libraries=services"></script>
 </head>
 <body>
     <div class="container" style="padding-top: 10px;">
